--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -49,7 +49,7 @@ jobs:
         run: |
           flutter config --no-analytics
           cd log
-          flet build windows --verbose  --build-number=$env:BUILD_NUMBER --build-version=$env:BUILD_VERSION
+          flet build windows --verbose  --no-rich-output --build-number=$env:BUILD_NUMBER --build-version=$env:BUILD_VERSION
 
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4.3.4
