--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -56,6 +56,7 @@ jobs:
           flutter config --no-analytics # disable flutter analytics
           cd log
           ls -alh
+          flutter pub get
           flet build apk --verbose    # adapt the command to your needs - https://flet.dev/docs/publish
 
       - name: Upload APK Artifact
