--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           flutter config --no-analytics
           cd log
+          flutter pub get
           flet build windows --verbose  --no-rich-output --build-number=$env:BUILD_NUMBER --build-version=$env:BUILD_VERSION
 
       - name: Upload Windows Artifact
