--- a/.github/workflows/apk-build.yml
+++ b/.github/workflows/apk-build.yml
@@ -56,7 +56,7 @@ jobs:
           flutter config --no-analytics # disable flutter analytics
           cd log
           ls -alh
-          flet build apk --verbose    # adapt the command to your needs - https://flet.dev/docs/publish
+          dart run serious_python:main package . --mobile --platform mobile --dep-mappings flet=flet-embed --req-deps flet-embed --exclude build
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4.3.4 # https://github.com/marketplace/actions/upload-a-build-artifact
